Only show the system default font on platforms where applicable, b=206782, r=jshin, sr=blizzard