gfx/src/windows/nsFontMetricsWin.cpp
@@ -5441,6 +5441,19 @@ nsFontEnumeratorWin::HaveFontFor(const char* aLangGroup, PRBool* aResult)
 }
 
 NS_IMETHODIMP
+nsFontEnumeratorWin::GetDefaultFont(const char *aLangGroup, 
+  const char *aGeneric, PRUnichar **aResult)
+{
+  // aLangGroup=null or ""  means any (i.e., don't care)
+  // aGeneric=null or ""  means any (i.e, don't care)
+
+  NS_ENSURE_ARG_POINTER(aResult);
+  *aResult = nsnull;
+
+  return NS_OK;
+}
+
+NS_IMETHODIMP
 nsFontEnumeratorWin::UpdateFontList(PRBool *updateFontList)
 {
   PRBool haveFontForLang = PR_FALSE;
