gfx/src/xlib/nsFontMetricsXlib.cpp
@@ -5772,13 +5772,18 @@ nsFontEnumeratorXlib::EnumerateFonts(const char* aLangGroup,
   *aResult = nsnull;
   NS_ENSURE_ARG_POINTER(aCount);
   *aCount = 0;
-  NS_ENSURE_ARG_POINTER(aGeneric);
-  NS_ENSURE_ARG_POINTER(aLangGroup);
 
-  nsCOMPtr<nsIAtom> langGroup = getter_AddRefs(NS_NewAtom(aLangGroup));
+  // aLangGroup=null or ""  means any (i.e., don't care)
+  // aGeneric=null or ""  means any (i.e, don't care)
+  nsCOMPtr<nsIAtom> langGroup;
+  if (aLangGroup && *aLangGroup)
+    langGroup = do_GetAtom(aLangGroup);
+  const char* generic = nsnull;
+  if (aGeneric && *aGeneric)
+    generic = aGeneric;
 
   // XXX still need to implement aLangGroup and aGeneric
-  return EnumFonts(global_fmctx, langGroup, aGeneric, aCount, aResult);
+  return EnumFonts(global_fmctx, langGroup, generic, aCount, aResult);
 }
 
 NS_IMETHODIMP
@@ -5790,6 +5795,19 @@ nsFontEnumeratorXlib::HaveFontFor(const char* aLangGroup, PRBool* aResult)
 
   *aResult = PR_TRUE; // always return true for now.
   // Finish me - ftang
+  return NS_OK;
+}
+
+NS_IMETHODIMP
+nsFontEnumeratorXlib::GetDefaultFont(const char *aLangGroup, 
+  const char *aGeneric, PRUnichar **aResult)
+{
+  // aLangGroup=null or ""  means any (i.e., don't care)
+  // aGeneric=null or ""  means any (i.e, don't care)
+
+  NS_ENSURE_ARG_POINTER(aResult);
+  *aResult = nsnull;
+
   return NS_OK;
 }
 
